# ROMITest

./: CMakeLists.txt  ComportConnector.cpp  ComportConnector.h  Config.h  Device.cpp  Device.h  Message.cpp  Message.h  README.md  ROMITest.pro  ROMITest.xmind  UdpConnector.cpp  UdpConnector.h  main.cpp  Тестовое задание от ROMI.txt
